# dlgrind

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dlgrind-frame.cpp  dlgrind-opt.cpp  dlgrind-rotation.cpp  dlgrind.cpp  get-config.py
dlgrind/: hopcroft.capnp  hopcroft.cpp  hopcroft.h  main.h  schema.capnp  simulator.cpp  simulator.h  state.h
scripts/: sp-coverage.py
src/: dlgrind-rotation.cpp
src/dlgrind/: action_string.cpp  action_string.h  hopcroft.capnp  main.h  schema.capnp  simulator.cpp  simulator.h  state.cpp  state.h
